<resources>
    <string name="app_name">IXAT</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">SignUp</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="logout">LogOut</string>
    <string name="notify_rider">Book a Ride</string>
    <string name="offline_message1">You seem to be offline</string>
    <string name="offline_message2">Check your network settings</string>
    <string name="book_offline">Book Offline</string>
    <string name="go_online">Go Online</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="employee_login">Employee Login</string>
    <string name="customer_login">Customer Login</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="settings">settings</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="exit">exit</string>
    <string name="booking_your_ride">Booking Your Ride..</string>
    <string name="car_type">Car Type</string>
    <string name="prasanth_vinnakota">Prasanth Vinnakota</string>
    <string name="regular">Regular</string>
    <string name="prime">Prime</string>
    <string name="suv">SUV</string>
    <string name="start_ride">Start Ride</string>
    <string name="end_ride">End Ride</string>
    <string name="ride_history">Ride History</string>
    <string name="update">Update</string>
    <string name="car_model">Car Model</string>
    <string name="ride_type">Ride Type</string>
    <string name="available">Available</string>
    <string name="ride_distance">Ride Distance</string>
    <string name="you_rated">You Rated</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_for">Change Password for</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="signup">Register</string>
    <string name="forget_password">Forget password?</string>
    <string name="driver_name">Driver Name</string>
    <string name="car_name">Car Name</string>
    <string name="ride_cost">Ride Cost</string>
    <string name="rs_925">Rs. 925</string>
    <string name="rate_ride">Rate Ride</string>
    <string name="skoda">Skoda</string>
    <string name="rs_280">Rs. 280</string>
    <string name="_2_52_km">2.52 Km</string>
    <string name="_30_56">30:56</string>
    <string name="sunday">Sunday</string>
    <string name="_19_jan_2019">19 Jan 2019</string>
    <string name="_10_24">10:24</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="amount_received">Amount Received</string>
    <string name="_2_5_km">2.5 Km</string>
    <string name="_01_january_2019">01 January 2019</string>
    <string name="_12_00">12:00</string>
    <string name="lknhmnndknmdniennrrgrgrsnk14f">-lKnHMNndkNMdNIeNNrrgrgrsNk14f</string>
    <string name="no_pick_up_location">No Pick Up Location</string>
    <string name="no_drop_location">No Drop Location</string>
    <string name="_9490623621">9490623621</string>
</resources>
