<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ride_type_icon"
            android:layout_width="70sp"
            android:layout_height="90sp"
            android:src="@mipmap/regular_car" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sunday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:gravity="center"
                android:text="@string/_01_january_2019"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:gravity="center"
                android:text="@string/_12_00"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ride_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/regular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/unique_ride_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:gravity="center"
                android:text="@string/lknhmnndknmdniennrrgrgrsnk14f"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pick_up_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/no_pick_up_location"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/drop_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/no_drop_location"
                android:textSize="12sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginTop="10sp"
            android:background="@android:color/darker_gray"
            tools:ignore="SmallSp" />

    </LinearLayout>


</LinearLayout>