<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ride_history_layout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:alpha="0.6"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_history"
                style="?android:attr/progressBarStyle"
                android:layout_gravity="end" />

        </androidx.appcompat.widget.Toolbar>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:src="@mipmap/default_profile_pic"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/driver_name"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/userTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="@string/_9490623621" />

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/ride_and_car_information"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ride_type_icon"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@null"
            android:src="@mipmap/regular_car" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ride_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/prime" />

            <TextView
                android:id="@+id/car_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="@string/skoda" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/you_rated"/>
    <RatingBar
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:layout_gravity="center"
        android:id="@+id/ride_rating"
        android:isIndicator="true"/>

</LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15sp"
            android:id="@+id/ride_cost"
            android:text="@string/rs_280"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15sp"
            android:id="@+id/ride_distance"
            android:gravity="center"
            android:text="@string/_2_52_km"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15sp"
            android:gravity="center"
            android:id="@+id/ride_time"
            android:text="@string/_30_56"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_marginTop="15sp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_marginStart="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15sp">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />

        <TextView
            android:layout_marginStart="15sp"
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_19_jan_2019" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rideStartedTimeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_24" />

            <TextView
                android:layout_marginStart="5sp"
                android:id="@+id/pickup_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/pickup_location" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">


            <TextView
                android:layout_marginTop="10sp"
                android:id="@+id/rideEndedTimeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_24" />

            <TextView
                android:layout_marginStart="5sp"
                android:layout_marginTop="10sp"
                android:id="@+id/destination_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/destination_location" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    </LinearLayout>

</ScrollView>