<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".CustomerSettingsActivity"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_customer_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:alpha="0.6">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_customer_setting"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="end" />

    </android.support.v7.widget.Toolbar>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/default_profile_pic"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        app:civ_border_color="#FF000000"/>


        <EditText
            android:layout_marginTop="20sp"
            android:id="@+id/name"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:background="#11000000"
            android:textSize="20sp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:drawableStart="@drawable/man"/>


        <EditText
            android:layout_marginTop="10sp"
            android:id="@+id/tel"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:layout_gravity="center"
            android:background="#11000000"
            android:drawableStart="@drawable/phone"/>

    <android.support.v7.widget.CardView
        android:layout_width="300sp"
        android:layout_height="35sp"
        android:layout_gravity="center"
        app:cardCornerRadius="25sp"
        android:layout_marginTop="50sp"
        android:elevation="10sp"
        android:layout_marginBottom="20sp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/submit_customer"
        android:text="@string/update"
        android:layout_gravity="center"
        android:enabled="false"
        android:background="@android:color/transparent" />

    </android.support.v7.widget.CardView>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/logout_customer"
        android:layout_width="80sp"
        android:layout_alignParentBottom="true"
        android:layout_height="80sp"
        android:background="@null"
        android:drawableTop="@mipmap/logout"
        android:text="@string/logout"/>

        <Button
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:id="@+id/ride_history_customer"
            android:text="@string/ride_history"
            android:background="@null"
            android:drawableTop="@mipmap/history"/>

        <Button
            android:layout_width="80sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:drawableTop="@mipmap/change_password"
            android:layout_height="80sp"
            android:id="@+id/change_password_customer"
            android:text="@string/change_password"
            android:background="@null" />

    </RelativeLayout>

</LinearLayout>