<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical"
    android:alpha="0.6">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_password"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="end"
            android:visibility="gone" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:drawableTop="@mipmap/ixat"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:textColor="#000"
        android:text="@string/app_name"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/change_password_for"
        android:gravity="center"
        android:typeface="sans"/>


    <TextView
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:id="@+id/email"
        android:textSize="20sp"/>

    <EditText
        android:layout_marginTop="20sp"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:background="#11000000"
        android:hint="@string/current_password"
        android:drawableStart="@drawable/password"
        android:id="@+id/current_password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_marginTop="20sp"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:background="#11000000"
        android:hint="@string/new_password"
        android:drawableStart="@drawable/password"
        android:id="@+id/new_password"
        android:inputType="textPassword"/>

    <android.support.v7.widget.CardView
        android:layout_width="300sp"
        android:layout_height="35sp"
        android:layout_gravity="center"
        app:cardCornerRadius="25sp"
        android:layout_marginTop="50sp"
        android:elevation="10sp"
        android:layout_marginBottom="20sp">


    <Button
        android:layout_width="300sp"
        android:layout_height="35sp"
        android:text="@string/update_password"
        android:layout_gravity="center"
        android:id="@+id/update_password"
        android:background="@android:color/transparent"/>

    </android.support.v7.widget.CardView>

</LinearLayout>