<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingActivity"
    android:orientation="vertical"
    android:alpha="0.6">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_rating"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="end"
            android:visibility="gone" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:drawableTop="@mipmap/ixat"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:textColor="#000"
        android:text="@string/app_name"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        android:layout_gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rider_profile_picture"
        android:layout_width="96sp"
        android:layout_height="96sp"
        android:src="@mipmap/default_profile_pic"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFFFF"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginStart="20sp"
            android:id="@+id/rider_name"
            android:layout_width="300sp"
            android:layout_height="45sp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/driver_name"/>

        <TextView
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:id="@+id/rider_car_name"
            android:layout_width="300sp"
            android:layout_height="45sp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/car_name"/>

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:gravity="center"
            android:text="@string/ride_cost"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="25sp"
            android:background="#11000000"
            android:id="@+id/ride_cost"
            android:text="@string/rs_925"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_ride"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

    <RatingBar
        android:layout_marginTop="10sp"
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFF"
        android:numStars="5"
        android:stepSize="1" />

</LinearLayout>